# OpenARC

./: CMakeLists.txt  Makefile  README.md  build.sh  make.template
doc/: OpenARC_API.txt  README_OpenARC_IRIS.txt  bugfix.txt
makefiles/: make.header.ATLANTA  make.header.AURORA  make.header.BEACON  make.header.BRISBANE  make.header.COOLEY  make.header.CUDA  make.header.CUDAMPI  make.header.HIP  make.header.INTELFPGA  make.header.IRIS  make.header.IRISAURORA  make.header.IRISD  make.header.KOLD  make.header.LECONTE  make.header.MEGATRON  make.header.NEURON  make.header.NEWARK  make.header.OPENCL  make.header.OPENMP3  make.header.OSWALD  make.header.OSX  make.header.OSXLLVM  make.header.SUMMIT  make.header.TITAN  make.header.XAVIER  make.header.XE
openarcrt/: CMakeLists.txt  Makefile  batchmake.bash  binBuilder.cpp  brisbanedriver.cpp  cudadriver.cpp  hipdriver.cpp  irisdriver.cpp  omp_helper.cpp  omp_helper.h  omp_helper_ext.h  openacc.cpp  openacc.h  openaccrt.cpp  openaccrt.h  openaccrt_ext.h  opencldriver.cpp  readme_openarcrt.txt
src/: CMakeLists.txt
src/cetus/analysis/: BanerjeeTest.java  ControlFlowGraph.java  DFAGraph.java  IPPointsToAnalysis.java  LoopTools.java  NormalExpression.java  OmpParser.java  RangeAnalysis.java  RangeDomain.java
src/cetus/base/grammars/: NEWCTokenTypes.java  NEWCTokenTypes.txt  NewCLexer.java  NewCLexer.smap  NewCParser.g  NewCParser.java  NewCParser.smap  PreprocessorInfoChannel.java
src/cetus/hir/: DataFlowTools.java  MinMaxExpression.java  SimpleExpression.java  SymbolTools.java
src/cetus/transforms/: AnnotationParser.java  IVSubstitution.java  InlineExpansionPass.java
src/openacc/analysis/: ACCAnalysis.java  ACCParser.java  ASPENModelAnalysis.java  AccPrivatization.java  AccReduction.java  AnalysisTools.java  ParserTools.java
src/openacc/codegen/: acc2gpu.java
src/openacc/exec/: ACC2GPUDriver.java
src/openacc/hir/: ACCAnnotation.java  CUDASpecifier.java  KernelFunctionCall.java  OpenACCSpecifier.java  TemplateFunctionCall.java  TextureSpecifier.java
src/openacc/transforms/: ACC2CUDATranslator.java  ACC2GPUTranslationTools.java  ACC2GPUTranslator.java  ACC2OPENCLTranslator.java  ACCAnnotationParser.java  ACCLoopDirectivePreprocessor.java  ACCtoOMP3Translator.java  ACCtoOMP4Translator.java  CUDATranslationTools.java  CollapseTransformation.java  FPGASpecificTools.java  GlobalVariableParameterization.java  InlineFunctionTransformation.java  KernelCallingProcCloning.java  KernelsSplitting.java  OMP4toACCTranslator.java  OpenCLKernelTranslationTools.java  OpenCLTranslationTools.java  TransformTools.java  kernelVerifyTransformation.java
test/: openarcConf.sample
test/benchmarks/aspen/backprop/: Makefile  O2GBuild.script
test/benchmarks/aspen/cg/: Makefile  O2GBuild.script
test/benchmarks/aspen/ep/: Makefile  O2GBuild.script
test/benchmarks/aspen/jacobi/: Makefile  O2GBuild.script
test/benchmarks/aspen/laplace2d/: Makefile  O2GBuild.script
test/benchmarks/aspen/lulesh/: Makefile  O2GBuild.script
test/benchmarks/aspen/matmul/: Makefile  O2GBuild.script
test/benchmarks/aspen/sobel/: O2GBuild.script
test/benchmarks/openacc/altera/fft1d/: Makefile  O2GBuild.script
test/benchmarks/openacc/altera/fft1d_offchip/: Makefile  O2GBuild.script
test/benchmarks/openacc/altera/fft2d/: Makefile
test/benchmarks/openacc/altera/fft2d_nopipe/: Makefile  O2GBuild.script
test/benchmarks/openacc/altera/fft2d_parallel/: Makefile  O2GBuild.script
test/benchmarks/openacc/altera/sobel/: O2GBuild.script
test/benchmarks/openacc/altera/srad/: O2GBuild.script
test/benchmarks/openacc/kernels/axpy_tasks/: Makefile  O2GBuild.script  axpy.c  openarcConf_NORMAL.txt
test/benchmarks/openacc/kernels/cg/: Makefile  O2GBuild.script  cg.c  openarcConf_NORMAL.txt
test/benchmarks/openacc/kernels/cg_tasks/: Makefile  O2GBuild.script  arcutil.c  arcutil.h  cg.c  openarcConf_NORMAL.txt
test/benchmarks/openacc/lulesh/: Makefile  O2GBuild.script  lulesh-init.c  lulesh.c
test/benchmarks/openacc/npb/cg/: cg.c  (+2 more)
test/benchmarks/openacc/randles/: Makefile  O2GBuild.script  dev.shear.nocells.c  openarcConf_NORMAL.txt
test/benchmarks/openacc/xsbench/: Makefile  O2GBuild.script  io.c
test/benchmarks/openacc/xsbench_tasks/: CalculateXS.c  Main.c  Main.c_single  Materials.c  O2GBuild.script  XSbench_header.h  XSutils.c  io.c  openarcConf_NORMAL.txt
test/examples/openarc/advancedmapping/: Makefile  O2GBuild.script
test/examples/openarc/altera/: Makefile  O2GBuild.script
test/examples/openarc/altera_opencllib/: Makefile  O2GBuild.script
test/examples/openarc/altera_pipe/: Makefile  O2GBuild.script
test/examples/openarc/arrayreduction/: Makefile  O2GBuild.script
test/examples/openarc/jacobi_async/: Makefile  O2GBuild.script  jacobi.c_ver1  jacobi.c_ver2  jacobi.c_ver3  jacobi.c_ver4  openarcConf_NORMAL.txt
test/examples/openarc/jacobi_mpi/: Makefile  O2GBuild.script
test/examples/openarc/matmul/: O2GBuild.script  matmul3.c  matmul4.c  matmul5.c  matmul6.c  matmul7.c
test/examples/openarc/matmul_aspen/: Makefile  O2GBuild.script
test/examples/openarc/matmul_bind/: Makefile  O2GBuild.script
test/examples/openarc/matmul_debug/: O2GBuild.script  matmul.c
test/examples/openarc/matmul_ftinject/: Makefile  O2GBuild.script
test/examples/openarc/matmul_gpu_fpga/: Makefile  O2GBuild.script
test/examples/openarc/matmul_openacc_cuda/: Makefile  O2GBuild.script
test/examples/openarc/matmul_openacce/: Makefile  O2GBuild.script
test/examples/openarc/matmul_openacce2/: O2GBuild.script
test/examples/openarc/matmul_tuning/: Makefile  O2GBuild.script  tBatchTuning.bash
test/examples/openarc/openmp/: Makefile  O2GBuild.script
test/examples/openarc/unifiedmemory/: Makefile  O2GBuild.script  jacobi.c  openarcConf_NORMAL.txt
test/examples/openarc/vecadd/: Makefile  O2GBuild.script  openarcConf_NORMAL.txt  vecadd.c_v1  vecadd.c_v2
test/examples/openarc/vecadd_red/: Makefile  O2GBuild.script  openarcConf_NORMAL.txt  vecadd_red.c
test/examples/openarc/vecadd_tasks/: O2GBuild.script  vecadd.c_v1  vecadd.c_v2  vecadd.c_v3
(+136 files in other folders)
